tests/expectations/compiler/slice/slice_non_const_fail.out
Error [ECMP0376015]: The bounds of this slice expression could not be determined at compile time.
    --> compiler-test:5:16
     |
   5 |         return a[start..end];
     |                ^^^^^^^^^^^^^
